--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "app": "webpack-dev-server --config webpack.config.js",
-    "build": "NODE_ENV=production webpack --bail --progress --config webpack.config.js --display-optimization-bailout",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "app": "webpack-dev-server",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.34",
-    "@babel/polyfill": "^7.0.0-beta.34",
     "@babel/preset-env": "^7.0.0-beta.34",
     "babel-loader": "^8.0.0-beta.0",
     "webpack": "3.9.1",
-    "webpack-dev-server": "2.9.5",
-    "webpack-merge": "4.1.1"
+    "webpack-dev-server": "2.9.5"
   }
 }
